tests/baselines/reference/privateNamesAndDecorators.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts(4,5): error TS1206: Decorators are not valid here.
tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts(6,5): error TS1206: Decorators are not valid here.
tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts(7,5): error TS18022: A method cannot be named with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts (3 errors) ====
    declare function dec<T>(target: T): T;
    
    class A {
        @dec                // Error
        ~
!!! error TS1206: Decorators are not valid here.
        #foo = 1;
        @dec                // Error
        ~
!!! error TS1206: Decorators are not valid here.
        #bar(): void { }
        ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
    }
    